# cmake_template_with_catch2

./: .editorconfig  CMakeLists.txt
src/: CMakeLists.txt  library.c  library_internal.h
test/: CMakeLists.txt  testcast1.cpp
